k8s-local/core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-app
spec:
  selector:
    matchLabels:
      app: core-app
  replicas: 1
  template:
    metadata:
      labels:
        app: core-app
    spec:
      containers:
      - name: job
        image: stevenzchao/local-cat-finding-system-core
        ports:
        - containerPort: 8080  
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2000m
            memory: 2000Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: core-app
  labels:
    app: core-app
spec:
  selector:
    app: core-app
  ports:
    - port: 80
      targetPort: 8080
      # nodePort: 31234
