k8s-local/redis-reactive.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-reactive
spec:
  serviceName: redis-reactive-service
  selector:
    matchLabels:
      app: redis-reactive
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-reactive
    spec:
      containers:
      - name: redis-reactive
        image: redis:6.2
        ports:
        - containerPort: 6379               
---
apiVersion: v1
kind: Service
metadata:
  name: redis-reactive-service
spec:
  clusterIP: None
  selector:
    app: redis-reactive
  ports:
  - port: 6379
    targetPort: 6379
