k8s-local/cat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: "cat.com.tw"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: core-app
            port:
              number: 80
